--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
   "id": "theripper93-freepack",
   "url": "https://github.com/KillerOfPie/theripper93-FreePack",
   "manifest": "https://raw.githubusercontent.com/KillerOfPie/theripper93-FreePack/main/manifest.json",
+  "download": "https://raw.githubusercontent.com/KillerOfPie/theripper93-FreePack/main/manifest.json",
   "relationships": {
     "requires": [
       {
