--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     }
   ],
   "id": "theripper93-freepack",
+  "type": "module",
   "url": "https://github.com/KillerOfPie/theripper93-FreePack",
   "manifest": "https://raw.githubusercontent.com/KillerOfPie/theripper93-FreePack/main/manifest.json",
   "download": "https://github.com/KillerOfPie/theripper93-FreePack/raw/main/module.zip",
