Change to use Foundry demo module as dummy

--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,9 @@
     }
   ],
   "id": "theripper93-freepack",
-  "type": "module",
   "url": "https://github.com/KillerOfPie/theripper93-FreePack",
   "manifest": "https://raw.githubusercontent.com/KillerOfPie/theripper93-FreePack/main/manifest.json",
-  "download": "https://github.com/KillerOfPie/theripper93-FreePack/raw/main/module.zip",
+  "download": "https://gitlab.com/encounterlibrary/my-content-module/-/raw/main/my-content-module.zip",
   "relationships": {
     "requires": [
       {
